--- a/src/test/index.html
+++ b/src/test/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>React utils</title>
+    <style>
+      html,body { margin: 0; height: 100vh; width: 100vw; }
+      #app { height: 100% }
+    </style>
   </head>
   <body>
     <div id="app"></div>
